refactor: reorganizada la estructura de paquetes de la suite de pruebas y actualizado los argumentos del compilador